# smart-cleaner

./: .gitignore  LICENSE  README.md  SETUP_GEMINI.md  SETUP_OLLAMA.md  pyproject.toml  requirements.txt  sample_config.yaml  setup.py  universal_data_pipeline.py
examples/: auto_pipeline_demo.py  basic_usage.py  cohort_imputation_demo.py
smart_cleaner/: __init__.py
smart_cleaner/core/: __init__.py  advanced_eda.py  ai_advisor.py  ai_advisor_gemini.py  ai_advisor_ollama.py  ai_strategy_advisor.py  audit.py  auto_pipeline.py  batch_processor.py  class_balancer.py  data_cleaner.py  data_dictionary.py  data_leakage_detector.py  data_quality_auditor.py  duplicates.py  eda.py  feature_encoder.py  feature_engineer.py  feature_scaler.py  feature_selector.py  final_quality_checker.py  health_validator.py  imputation.py  ml_ready_export.py  multicollinearity_checker.py  outliers.py  profiler.py  report_generator.py  smart_imputer.py  technical_documenter.py  validators.py  visualizer.py
smart_cleaner/utils/: __init__.py  config.py  progress.py  validators.py  yaml_config.py
tests/: __init__.py  test_audit.py  test_imputation.py  test_profiler.py  test_validators.py
webapp/: app.py
